# dayvinchik-bot

./: .env.example  .gitignore  Cargo.toml  README.md  build.rs  changelog.md  docker-compose.yaml  example.json  ft.sh  issues.md  login.md  message.json  people.jsonl  pg_vector_spike.md  prompts.json  run.md  superlikes.json  teleterm.json
cron/: Cargo.toml
cron/src/: main.rs
migrations/: init.sql  vector.sql
src/: auth.rs  chats.rs  common.rs  constants.rs  cron.rs  errors.rs  file.rs  input.rs  llm_api.rs  main.rs  match.rs  message.rs  my_profile.rs  prompts.rs  start_phrases.rs  superlike.rs  vault.rs  vault_deprecated.rs
src/autoresponder/: mod.rs  types.rs
src/cli/: mod.rs
src/common/: mod.rs
src/embeddings/: ollama.rs
src/entities/: actor.rs  chat_meta.rs  chat_responder.rs  dv_bot.rs  image_embeddings.rs  mod.rs  profile.rs  profile_match.rs  profile_reviewer.rs  superlike.rs  task.rs
src/helpers/: mod.rs
src/matches/: mod.rs
src/messages/: message.rs
src/openapi/: example.md  fine_tuning.rs  llm_api.rs  mod.rs  openai.rs
src/pg/: pg.rs
src/td/: mod.rs  read.rs  td_chats.rs  td_command_map.rs  td_file.rs  td_manager.rs  td_message.rs  td_request.rs  td_response.rs  td_socket.rs  tdjson.rs
src/viuer/: mod.rs
