[package]
name = "teleterm-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json", "blocking"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["full"] }
project-root = "=0.2.2"
uuid = { version = "1.12.1", features = ["v4"] }
rust-tdlib = "0.4.3"
qrcode = { version = "0.14.1", features = ["image"] }
image = "0.25.5"