[package]
name = "teleterm-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36.0", features = ["rt-multi-thread"] }
uuid = { version = "1.12.1", features = ["v4", "serde"] }
rust-tdlib = "0.4.3"
qrcode = { version = "0.14.1", features = ["image"] }
image = "0.25.5"
log = "0.4.25"
env_logger = "0.11.6"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
lazy_static = "1.5.0"
deadpool-postgres = "0.14.1"
deadpool = "0.12.2"
base64 = "0.22.1"
thiserror = { version = "2", features = ["default", "std"] }
async-trait = "0.1.86"
rand = "0.9.0"
ollama-rs = "0.2.6"
pgvector = { version = "0.4", features = ["postgres"] }

[dev-dependencies]
console-subscriber = "0.4.1"
cron = "0.15.0"
project-root = "=0.2.2"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
tokio = { version = "1.36.0", features = ["full"] }
